footer and navbar mobile alignment fixed

--- a/src/NavBar.module.css
+++ b/src/NavBar.module.css
@@ -7,8 +7,9 @@
 }
 
 .logo img {
-  width: 150px;
+  max-width: 50%;
   height: auto;
+  margin-right: 50px;
 }
 
 .nav-links {
@@ -17,7 +18,8 @@
 }
 
 .nav-links li {
-  margin-left: 30px;
+  margin: 0px;
+  width: 15vh;
 }
 
 .nav-links a {
